--- a/src/pages/allProducts/assets/AllProducts.css
+++ b/src/pages/allProducts/assets/AllProducts.css
@@ -10,6 +10,9 @@
     border-color:rgb(235, 235, 235) !important;
     font-size: 14px;
 }
+.refinedBy ul{
+    font-size: 12px;
+}
 
 .productsListing .card p{
 font-size: 13px !important;
