--- a/src/components/navigation/Navbar.css
+++ b/src/components/navigation/Navbar.css
@@ -7,6 +7,10 @@ nav{
 nav li{
     padding: 0 5px;
 }
+nav .nav-link{
+  
+  font-size: 16px !important;
+}
 .dropdown-submenu {
     position: relative;
     padding-right: 20px;
@@ -28,9 +32,13 @@ nav li{
 }
   .dropdown-toggle::after {
     border:none;
-    padding: 3px;
+    padding: 2px;
     border-right:2px solid;
     border-bottom:2px solid ;
     transform: rotate(45deg);
-    margin-left: 5px;
+    margin-left: 7px;
+}
+nav .contact  *{
+  font-size: 14px !important;
+  line-height: 12px;
 }
