--- a/src/pages/home/assets/Home.css
+++ b/src/pages/home/assets/Home.css
@@ -57,9 +57,32 @@ header .list p{
 .inputBox *:focus {
   outline: none;
   border-color: transparent;
+  }
+  
+  @media (max-width:500px){
+    header h1 {
+      font-size: 30px;
+      }
+    .header {
+    background-size: 150% 125%;
+    }
+    header h5 {
+      font-size: 20px;
+  }
+  header .list p{
+    font-size: 14px !important;
+    line-height: 16px;
+
 }
+  
+  }
 
+@media (min-width:500px) and (max-width:768px){
+  .header {
+  background-size: 110% 125%;
+  }
 
+}
 
 
 
@@ -70,6 +93,7 @@ mark {
 .sellAndBuy{
     background: url('./images/background/buySell.png') center;
     background-size: cover;
+    position: relative;
 }
 .sellAndBuy .bsComponent{
     background: #EEEDFF;
@@ -95,6 +119,34 @@ font-weight: 800;
     font-size: 30px;
     color: #FFF500;
 }
+.sellAndBuy .buySellBtn{
+  position: absolute;
+  bottom: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: white;
+  font-size: 28px;
+  border-radius: 30px;
+  overflow: hidden;
+  box-shadow: inset 0 0 10px -5px rgba(0, 0, 0, 0.5);
+
+}
+.sellAndBuy .bg-yellow{
+  background-color: #FFF500 !important;
+}
+
+@media (max-width:500px){
+
+
+  .sellAndBuy{
+    background-image: none;
+  }
+  .sellAndBuy .buySellBtn{
+    bottom: -50px;
+    text-align: center;
+  }
+}
+
 
 .plantCard {
   border-radius: 10px;
@@ -184,7 +236,7 @@ font-weight: 800;
 
 .serviceCard {
   height: 154px;
-  width: 144px;
+  width: 134px;
   border-radius: 6px;
   margin: 7px;
   background-color: white;
@@ -224,6 +276,10 @@ font-weight: 800;
   .customerLove .d-flex h1 {
     font-size: 50px;
   }
+  
+.serviceCard {
+  width: 144px;
+}
 }
 /* Add this CSS to your stylesheet */
 .slick-next,
